Bug 280814 - The Syndication (RSS reader) doesn't download the feeed
Summary: The Syndication (RSS reader) doesn't download the feeed
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-26 04:11 UTC by André Martins
Modified: 2011-09-03 09:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Martins 2011-08-26 04:11:07 UTC
Version:           unspecified (using KDE 4.6.5) 
OS:                Linux

In the Syndication the download status of that feed shows:
"Download failed: Unknown error code 0 Please send a full bug report at http://bugs.kde.org"
I've network connection, the feed works 24/7 because I can open it in other rss reader

Reproducible: Always

Steps to Reproduce:
Just enable Syndication and add some rss stuff, do you want some of the ones I'm using?

Actual Results:  
The syndication stops downloading

Expected Results:  
The syndication downloading the feeds every 30 minutes 

OS: Linux (x86_64) release 2.6.40.3-0.fc15.x86_64
Compiler: gcc
Comment 1 Joris Guisson 2011-09-02 18:45:16 UTC
Which feeds, everything seems to be OK here.
Comment 3 André Martins 2011-09-02 20:56:33 UTC
I just figure it out.
I thought the syndication worked with the port 80, the problem was the port I was using was not open on the router.
It's working after 2 hours, if this doesn't solve it I will report again ;)
Tks guys
Comment 4 André Martins 2011-09-03 01:00:57 UTC
Nope, I was wrong, still does the error
Comment 5 Joris Guisson 2011-09-03 09:41:47 UTC
It's a server side problem, the piratebay is returning 404 File Not Found errors occasionally. 

Only thing I can do is improve the error display in ktorrent.
Comment 6 Joris Guisson 2011-09-03 09:42:05 UTC
Git commit df48144fa3badb41895701821c4950d1c4828787 by Joris Guisson.
Committed on 03/09/2011 at 11:41.
Pushed by guisson into branch 'master'.

Improve error display of syndication plugin errors

BUG: 280814

M  +2    -1    plugins/syndication/syndicationactivity.cpp
M  +29   -3    plugins/syndication/feed.cpp
M  +4    -0    plugins/syndication/feedretriever.cpp
M  +1    -0    ChangeLog
M  +3    -0    plugins/syndication/feed.h

http://commits.kde.org/ktorrent/df48144fa3badb41895701821c4950d1c4828787