Improve error display of syndication plugin errors

BUG: 280814